--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
@@ -27,6 +28,7 @@
     "eslint-config-next": "13.4.7",
     "lucide-react": "^0.257.0",
     "next": "13.4.7",
+    "next-cloudinary": "^4.13.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
